--- a/ARAInst/ARAInst.csproj
+++ b/ARAInst/ARAInst.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Packet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protocol.cs" />
     <Compile Include="ServerInfo.cs" />
     <Compile Include="ServerManager.cs" />
     <EmbeddedResource Include="Form1.resx">
