--- a/Packet/Packet.vcxproj
+++ b/Packet/Packet.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="Argument.h" />
     <ClInclude Include="ErrorCode.h" />
     <ClInclude Include="InstPacket.h" />
+    <ClInclude Include="MemoryManager.h" />
     <ClInclude Include="Packet.h" />
     <ClInclude Include="SimPacket.h" />
   </ItemGroup>
@@ -84,6 +85,7 @@
     <ClCompile Include="Argument.cpp" />
     <ClCompile Include="ErrorCode.cpp" />
     <ClCompile Include="InstPacket.cpp" />
+    <ClCompile Include="MemoryManager.cpp" />
     <ClCompile Include="Packet.cpp" />
     <ClCompile Include="SimPacket.cpp" />
   </ItemGroup>
